# leptos-forge

./: .gitignore  CHANGES.md  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
forge/: Cargo.toml
forge/src/css/main/: forge.css  lib.css  main.css
forge/src/resources/: placeholder.txt
forge/src/rust/main/: app.rs  lib.rs  navigation.rs  section.rs  story.rs
forge/src/rust/main/app/: mod.rs  state.rs
forge/src/rust/main/story/: mod.rs  tests.rs
forge/src/rust/main/views/: canvas.rs  component_panel.rs  content.rs  control_pane.rs  description.rs  mod.rs  page.rs  section.rs  story.rs  tab_panel.rs
forge/src/rust/main/views/section/: mod.rs
forge/src/rust/main/views/section/markdown/: mod.rs
forge/src/rust/main/views/section/markdown/tests/: header.rs  markdown.rs  mod.rs  simple.rs  story.rs
forge/src/rust/main/views/widgets/: mod.rs  test_viewer.rs
libs/build_script/: CHANGES.md  Cargo.toml  README.md
libs/build_script/licenses/: cargo-resources.license
libs/build_script/src/rust/main/: console.rs  lib.rs  resources.rs  tailwind.rs
libs/ui_components/: Cargo.toml  README.md
libs/ui_components/src/css/main/: common.css  lib.css  main.css  markdown.css  menu.css
libs/ui_components/src/rust/main/: lib.rs  menu.rs
libs/ui_components/src/rust/main/layout/: content_pane.rs  drawer.rs  main_menu.rs  mod.rs  root.rs  work_area.rs
libs/ui_components/src/rust/main/model/: mod.rs
libs/ui_components/src/rust/main/primitives/: button.rs  label.rs  markdown.rs  mod.rs  switch.rs  toggle.rs
libs/ui_components/src/rust/main/primitives/input/: button.rs  mod.rs
libs/ui_components/src/rust/main/widgets/: accordion.rs  details.rs  field.rs  logo.rs  mod.rs  single_select.rs
libs/ui_layout/: Cargo.toml
libs/ui_layout/src/rust/main/: lib.rs  main_menu.rs  root.rs
libs/utils/: Cargo.toml  README.md
libs/utils/src/rust/main/: immutable.rs  lib.rs  threadsafe.rs
libs/utils/src/rust/main/proptest/: mod.rs  uuid.rs  vec.rs
libs/utils_leptos/: Cargo.toml  README.md
libs/utils_leptos/src/rust/main/: css.rs  lib.rs  signal.rs
libs/utils_leptos/src/rust/main/stores/: mod.rs  stored_ref.rs
site/: Cargo.toml  Makefile  Readme.md  Trunk.toml  index.html
site/src/css/main/: lib.css  main.css
site/src/rust/main/: main.rs
site/src/rust/main/stories/: mod.rs  setup.rs
site/src/rust/main/stories/components/: mod.rs
site/src/rust/main/stories/components/primitives/: button.rs  label.rs  menu.rs  mod.rs  switch.rs
site/src/rust/main/stories/components/primitives/markdown/: admonish.rs  basic.rs  kbd.rs  mod.rs  table.rs
site/src/rust/main/stories/components/widgets/: codearea.rs  logo.rs  mod.rs  password.rs  text_field.rs  textarea.rs
site/src/rust/main/stories/components/widgets/select/: mod.rs  store_failure.rs
site/src/rust/main/stories/primitives/: button.rs  label.rs  menu.rs  mod.rs
site/src/rust/main/stories/primitives/markdown/: admonish.rs  basic.rs  table.rs
site/src/rust/main/stories/screen/: mod.rs
site/src/rust/main/stories/setup/: adding_tests.rs  mod.rs  nix.rs  refine_story.rs  resources.rs
site/src/rust/main/stories/usage/: custom_views.rs  mod.rs  routes.rs  sections.rs  stories.rs  urwsignal.rs
site/src/rust/main/stories/usage/stories/: mod.rs  testing.rs
site/src/rust/main/stories/widgets/: codearea.rs  logo.rs  mod.rs  password.rs  text_field.rs  textarea.rs
site/src/rust/main/stories/widgets/select/: mod.rs
