[package]
name = "leptos_forge"
version.workspace = true
edition.workspace = true
readme = "../README.md"
build="src/rust/build/build.rs"
include = [
    "target/resources/leptos_forge/main.css",
    "src/resources/logo/logo.svg"
]

[lib]
path = "src/rust/main/lib.rs"

[dependencies]
leptos = { workspace = true, features = ["csr"] }
leptos_router.workspace = true
reactive_stores.workspace = true
utils.workspace = true
utils_leptos.workspace = true 

ui_components.workspace = true

[build-dependencies]
cargo_metadata.workspace = true
cargo-resources.workspace = true
build-print.workspace = true
chrono.workspace = true

[features]
default = []
clean_resources = []

[lints]
workspace = true

[package.metadata.cargo_resources]
resource_root = "target/resources"
requires = [
    { resource_name = "leptos_forge_ui_components/common.css" },
    { resource_name = "leptos_forge_ui_components/markdown.css" },
    { resource_name = "leptos_forge_ui_components/typography.css" },
    { resource_name = "leptos_forge_ui_components/main.css" }
]
provides = [
    { crate_path = "target/resources/leptos_forge/main.css", output_path="leptos_forge/main.css", resource_name="leptos_forge/main.css"},
    { crate_path = "src/resources/logo/logo.svg", output_path="leptos_forge/logo/logo.svg", resource_name="leptos_forge/logo/logo.svg" },
]