[package]
# Name of the create
#
# If for some reason there is a need to change a crate name, then you also need
# to update the build script, because we've hardcoded the crate name there
name = "leptos_forge"
license.workspace = true
description = "Build and test your Leptos components"
version.workspace = true
edition.workspace = true
readme = "../README.md"
include = [
    # "target/resources/leptos_forge/main.css",
    "src"
]
repository.workspace = true
homepage.workspace = true

[lib]
path = "src/rust/main/lib.rs"

[dependencies]
document-features.workspace = true
leptos = { workspace = true, features = ["csr"] }
leptos_router.workspace = true
reactive_stores.workspace = true
utils.workspace = true
utils_leptos.workspace = true 
ui_components.workspace = true

[build-dependencies]
build-print.workspace = true

[lints]
workspace = true

[package.metadata.cargo_resources]
provides = [
    { crate_path = "src/resources/logo/logo.svg", output_path="leptos_forge/logo/logo.svg", resource_name="leptos_forge/logo/logo.svg" },
]

[package.metadata.leptos_forge]
tailwind = { lib="src/css/main/lib.css" }