[package]
name = "leptos-forge-site"
version.workspace = true
edition.workspace = true
publish = false # we don't need this crate to be published to the crates.io 
build="src/rust/build/build.rs"

[[bin]]
name = "site"
path = "src/rust/main/main.rs"

[dependencies]
leptos = { workspace = true, features = ["csr"] }
leptos-node-ref.workspace = true
leptos-use.workspace = true
reactive_stores.workspace = true
js-sys.workspace = true

forge.workspace = true
utils_leptos.workspace = true 
ui_components.workspace = true

console_log.workspace = true
console_error_panic_hook.workspace = true
log.workspace = true
testing-library-dom.workspace = true
uuid.workspace = true

[build-dependencies]
cargo_metadata.workspace = true
cargo-resources.workspace = true

[features]
default = []

[lints]
workspace = true

[package.metadata.cargo_resources]
resource_root = "target/resources"
provides = [
    { crate_path = "src/resources/images/setup/first_run.png", output_path="leptos_forge_site/images/setup/first_run.png", encoding="Bin" },
    { crate_path = "src/resources/images/setup/refine_story/01-component_view.png", output_path="leptos_forge_site/images/setup/refine_story/01-component_view.png", encoding="Bin" },
    { crate_path = "src/resources/images/setup/refine_story/02-counter_with_control.png", output_path="leptos_forge_site/images/setup/refine_story/02-counter_with_control.png", encoding="Bin" },
    { crate_path = "src/resources/images/setup/refine_story/03-counter_with_control-3rd_click.png", output_path="leptos_forge_site/images/setup/refine_story/03-counter_with_control-3rd_click.png", encoding="Bin" },
    { crate_path = "src/resources/images/setup/refine_story/04-counter_with_control-3000.png", output_path="leptos_forge_site/images/setup/refine_story/04-counter_with_control-3000.png", encoding="Bin" },
    { crate_path = "src/resources/images/setup/refine_story/05-counter_documentation.png", output_path="leptos_forge_site/images/setup/refine_story/05-counter_documentation.png", encoding="Bin" },
]