[package]
name = "leptos-forge-site"
version.workspace = true
edition.workspace = true
publish = false # we don't need this crate to be published to the crates.io 
build="src/rust/build/build.rs"
license.workspace = true
description = "Leptos_forge homepage"
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "site"
path = "src/rust/main/main.rs"

[dependencies]
leptos = { workspace = true, features = ["csr"] }
leptos-node-ref.workspace = true
leptos-use.workspace = true
reactive_stores.workspace = true
js-sys.workspace = true

forge.workspace = true
utils_leptos.workspace = true 
ui_components.workspace = true

console_log.workspace = true
console_error_panic_hook.workspace = true
log.workspace = true
uuid.workspace = true

# Unfortunately, testing-library-dom which has the `create_event` and `fire_event` has not been released on crates.io yet
#
# This dependency is here directly because this crate is not going to be published
testing-library-dom = { version = "0.0.1", git="https://github.com/RustForWeb/testing-library.git", rev="05c93b5" }

[build-dependencies]
build_script.workspace = true
cargo_metadata.workspace = true

[features]
default = []
clean_resources = [
    "forge/clean_resources"
]

[lints]
workspace = true

[package.metadata.cargo_resources]
resource_root = "target/resources"
provides = [
    # Setup
    { crate_path = "src/resources/images/guides/first_run.png", output_path="leptos_forge_site/images/guides/first_run.png", encoding="Bin" },
    # Setup / adding the first story
    # { crate_path = "src/resources/images/guides/refine_story/01-component_view.png",                 output_path="leptos_forge_site/images/guides/refine_story/01-component_view.png", encoding="Bin" },
    # { crate_path = "src/resources/images/guides/refine_story/02-counter_with_control.png",           output_path="leptos_forge_site/images/guides/refine_story/02-counter_with_control.png", encoding="Bin" },
    # { crate_path = "src/resources/images/guides/refine_story/03-counter_with_control-3rd_click.png", output_path="leptos_forge_site/images/guides/refine_story/03-counter_with_control-3rd_click.png", encoding="Bin" },
    # { crate_path = "src/resources/images/guides/refine_story/04-counter_with_control-3000.png",      output_path="leptos_forge_site/images/guides/refine_story/04-counter_with_control-3000.png", encoding="Bin" },
    { crate_path = "src/resources/images/guides/refine_story/05-counter_documentation.png",          output_path="leptos_forge_site/images/guides/refine_story/05-counter_documentation.png", encoding="Bin" },
    # Setup / adding tests
    { crate_path = "src/resources/images/guides/adding_tests/01-tests_tab.png",      output_path="leptos_forge_site/images/guides/adding_tests/01-tests_tab.png", encoding="Bin" },
    { crate_path = "src/resources/images/guides/adding_tests/02-test_runner_ui.png", output_path="leptos_forge_site/images/guides/adding_tests/02-test_runner_ui.png", encoding="Bin" },
    { crate_path = "src/resources/images/guides/adding_tests/03-after_3rd_step.png", output_path="leptos_forge_site/images/guides/adding_tests/03-after_3rd_step.png", encoding="Bin" },
    { crate_path = "src/resources/images/guides/adding_tests/04-completed.png", output_path="leptos_forge_site/images/guides/adding_tests/04-completed.png", encoding="Bin" },
]

[package.metadata.leptos_forge.tailwind]
lib="src/css/main/lib.css"
output="target/resources/leptos_forge_site/css/main.css"