[package]
name = "leptos_forge_ui_components"
version.workspace = true
edition.workspace = true
build="src/rust/build/build.rs"
include = [
    "src/css/main/markdown.css",
    "src/css/main/typography.css",
]

[lib]
path = "src/rust/main/lib.rs"

[dependencies]
icondata.workspace = true
leptos.workspace = true
leptos_router.workspace = true
leptos_icons.workspace = true
leptos-node-ref.workspace = true
pulldown-cmark.workspace = true
reactive_stores.workspace =true
utils.workspace = true
utils_leptos.workspace = true
uuid = { workspace = true, features = ["js", "v4"] }

[features]
default = []

[lints]
workspace = true
