[package]
name = "leptos_forge_ui_components"
description = "Components you can use in your leptos_forge application"
license.workspace = true
version.workspace = true
edition.workspace = true
build="src/rust/build/build.rs"
include = [
    "src",
]
repository.workspace = true
homepage.workspace = true

[lib]
path = "src/rust/main/lib.rs"

[dependencies]
icondata.workspace = true
leptos.workspace = true
leptos_router.workspace = true
leptos_icons.workspace = true
leptos-node-ref.workspace = true
pulldown-cmark.workspace = true
reactive_stores.workspace =true
utils.workspace = true
utils_leptos.workspace = true
uuid = { workspace = true, features = ["js", "v4"] }

[build-dependencies]
build-print.workspace = true

[features]
default = []

[lints]
workspace = true

[package.metadata.leptos_forge.tailwind]
# Path to the main tailwind file for your crate
#
# Basically the tailwind `main.css` without `@import "tailwind"`. `@import "tailwind" 
# will be added for you automatically by the `leptos_forge_build_script` tailwind integration
lib="src/css/main/lib.css"