[package]
name = "leptos_forge_utils"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Small general purpose utility from leptos_forge project"
repository.workspace = true
homepage.workspace = true

[lib]
path = "src/rust/main/lib.rs"

[dependencies]
serde = { workspace = true, optional = true }
proptest = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[dev-dependencies]

[features]
serde = [
    "dep:serde"
]
proptest = [
    "dep:proptest",
    "dep:uuid",
]

[lints]
workspace = true